Finalized page1 mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,14 @@
     font-size: 60%; /* controle das medidas rem */
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+
 html, body {
     height: 100vh;
 }
