--- a/styles/main.css
+++ b/styles/main.css
@@ -59,6 +59,12 @@ textarea {
 }
 
 #container {
-    width: 90vh;
+    width: 90vw;
     max-width: 700px;
+}
+
+@media (min-width: 700px) {
+    :root {
+        font-size: 62.5%; /* Todo rem vai ser relativo a 10px */
+    }
 }
