--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,9 +1,5 @@
 /*     Página inicial      */
 
-:root {
-    font-size: 40%; /* Modicar as medidas rem */
-}
-
 
 #page-landing {
     background-color: var(--color-primary);
@@ -24,7 +20,7 @@
 
 .logo-container h2 {
     font-weight: 500;
-    font-size: 3.6rem;
+    font-size: 3rem;
     line-height: 4.6rem;
     margin-top: 0.8rem;
 }
@@ -92,6 +88,53 @@
 
 .total-connections img {
     margin-right: 0.8rem;
+}
+
+@media (max-width: 699px){
+    :root {
+        font-size: 40%;
+    }
+}
+
+@media (min-width: 1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 120px;
+        grid-template-areas: 
+        "proffy image image" 
+        "button button texting";
+        gap: 60px;
+    }
+
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+    }
+
+    .logo-container img {
+        height: 120px;
+    }
+
+    .hero-image {
+        grid-area: image;
+        height: 350px;
+    }
+
+    .buttons-container {
+        grid-area: button;
+        justify-content: flex-start;
+        margin: 0;
+    }
+
+    .total-connections {
+        grid-area: texting;
+        justify-content: end;
+    }
+
 }
 
 
