--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -59,11 +59,6 @@
     border-radius: 50%;
 }
 
-.teacher-item header img {
-    width: 8rem;
-    height: 8rem;
-    border-radius: 50%;
-}
 
 .teacher-item header div {
     margin-left: 2.4rem;
@@ -114,7 +109,7 @@
 .teacher-item footer button {
     width: 20rem;
     height: 5.6rem;
-    background: var(--color-secondary);
+    background: rgba(27, 74, 145, 0.774);
     color: var(--color-button-text);
 
     border: 0;
@@ -128,12 +123,17 @@
 
     text-decoration: none;
 
-    transition: background 0,2s;
+    transition: background 0.4s;
     margin-left: 1.6rem;
 }
 
 .teacher-item footer button:hover {
-    background-color: var(--color-secondary-dark);
+    background: rgba(53, 102, 177, 0.774);
+}
+
+.teacher-item footer button img {
+    height: 2rem;
+    width: 2rem;
 }
 
 @media (min-width: 700px) {
