--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -20,7 +20,7 @@
             <header class="page-header">
 
                 <div class="top-bar-container">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="images/icons/back.svg" alt="Voltar">
                     </a>
 
