--- a/public/styles/partials/page-study.css
+++ b/public/styles/partials/page-study.css
@@ -106,7 +106,7 @@
     display: block;
 }
 
-.teacher-item footer button {
+.teacher-item footer .button {
     width: 20rem;
     height: 5.6rem;
     background: rgba(27, 74, 145, 0.774);
@@ -131,7 +131,7 @@
     background: rgba(53, 102, 177, 0.774);
 }
 
-.teacher-item footer button img {
+.teacher-item footer .button img {
     height: 2rem;
     width: 2rem;
 }
