--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -89,7 +89,7 @@
 
                             <div class="input-block">
                                 <label for="cost">Custo da sua hora/aula <small>(R$)</small></label>
-                                <input type="cost" id="cost" type="number" required>
+                                <input name="cost" type="cost" id="cost" type="number" required>
                             </div>
 
                         </div>
