--- a/src/views/study.html
+++ b/src/views/study.html
@@ -53,29 +53,38 @@
             </header>
             
             <main>
-                {%for proffy in proffys %}
-                    <article class="teacher-item">
-                        <header>
-                            <img 
-                                src="{{proffy.avatar}}" 
-                                alt="{{proffy.name}}">
-                            <div>
-                                <strong>{{proffy.name}}</strong>
-                                <span>{{proffy.subject}}</span>
-                            </div>
-                        </header>
 
-                        <p>{{proffy.bio}}</p>
+                {% if proffys == "" %}
 
-                        <footer>
-                            <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
-                            </p>
-                            <a href="https://www.instagram.com/{{proffy.instagram}}" class="button" target="_blank">
-                                <img src="images/icons/instagram-logo.svg" alt="instagram">Entrar em contato
-                            </a>
-                        </footer>
-                    </article>
-                {%endfor%}
+                    <p class="no-results"> Nenhum professor encontrado com a sua pesquisa !</p>
+
+                {% else %}
+
+                    {%for proffy in proffys %}
+                        <article class="teacher-item">
+                            <header>
+                                <img 
+                                    src="{{proffy.avatar}}" 
+                                    alt="{{proffy.name}}">
+                                <div>
+                                    <strong>{{proffy.name}}</strong>
+                                    <span>{{proffy.subject}}</span>
+                                </div>
+                            </header>
+
+                            <p>{{proffy.bio}}</p>
+
+                            <footer>
+                                <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                                </p>
+                                <a href="https://www.instagram.com/{{proffy.instagram}}" class="button" target="_blank">
+                                    <img src="images/icons/instagram-logo.svg" alt="instagram">Entrar em contato
+                                </a>
+                            </footer>
+                        </article>
+                    {%endfor%}
+                        
+                {% endif %}
 
 
             </main>
