--- a/src/views/study.html
+++ b/src/views/study.html
@@ -35,7 +35,7 @@
                         <div class="select-block">
                             <label for="subject">Matéria</label>
                             <select name="subject" id="subject">
-                                <option value="" disabled="" hidden="">Selecione uma opção</option>
+                                <option value="" hidden="">Selecione uma opção</option>
 
                                 {%for subject in subjects %}
                                     <option value="{{loop.index}}" {{ "selected" if filter.subject == loop.index }} >  {{subject}}
@@ -54,10 +54,42 @@
             
             <main>
 
+
+                {% if filter == {} %}
+
+                {%for proffy in proffys %}
+                    <article class="teacher-item">
+                        <header>
+                            <img 
+                                src="{{proffy.avatar}}" 
+                                alt="{{proffy.name}}">
+                            <div>
+                                <strong>{{proffy.name}}</strong>
+                                <span>{{proffy.subject}}</span>
+                            </div>
+                        </header>
+
+                        <p>{{proffy.bio}}</p>
+
+                        <footer>
+                            <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
+                            </p>
+                            <a href="https://www.instagram.com/{{proffy.instagram}}" class="button" target="_blank">
+                                <img src="images/icons/instagram-logo.svg" alt="instagram">Entrar em contato
+                            </a>
+                        </footer>
+                    </article>
+                {% endfor %}
+
+                {% endif %}
+
+
+
+
+
                 {% if proffys == "" %}
 
                     <p class="no-results"> Nenhum professor encontrado com a sua pesquisa !</p>
-
                 {% else %}
 
                     {%for proffy in proffys %}
